# opengl-softbody

./: CMakeLists.txt  CMakePresets.json  CmakeUserPresets.json  imgui.ini  readme.md  ref.rs  vcpkg-configuration.json  vcpkg.json
.github/: copilot-instructions.md
include/GraphicEngine/: Camera.h  GraphicEngine.h  TextRenderer.h
include/GraphicObject/: BaseObject.h
include/PhysicEngine/: PhysicsEngine.h  PhysicsObject.h
include/glad/: glad.h
include/shader/: shader_s.h
include/util/: FIleSystem.h
includes/: filesystem.h  objectloader.h
includes/Graphic/: BaseObject.h  Camera.h  GUIManager.h  GraphicEngine.h  TextRenderer.h  shader_s.h
includes/Physics/: PhysicsEngine.h  PhysicsObject.h  SPHSolver.h  SPHsolver_old.h  TutorialSolver.h
includes/Test/: shader.h
resources/objects/: triangulated_gummy.mtl
src/: container_shader.fs  container_shader.vs  glad.c  main.cpp  multiple_lights.fs  multiple_lights.vs  shader.fs  shader.vs
